# 508-integrations

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: dev.py  run-server.sh
src/: main.py  models.py  settings.py
src/crm/: __init__.py  document_processor.py  espocrm_client.py  processor.py  skills_extractor.py
tests/: conftest.py  test_document_processor.py  test_espocrm_client.py  test_main.py  test_models.py  test_skills_extractor.py
